--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,9 @@
 }
 
 .head {
+    z-index: 8;
+    position: relative;
+    background-color: #e1e1e1;
     display: flex;
     justify-content: space-between;
     padding: 20px;
@@ -40,6 +43,7 @@ body.login .head {
 }
 
 .menu {
+    z-index: 10;
     display: none;
     position: absolute;
     background-color: #eee;
@@ -62,6 +66,16 @@ body.login .head {
 
 .menu li a:hover {
     background-color: #ddd;
+}
+
+.mask {
+    z-index: 6;
+    display: none;
+    position: absolute;
+    background-color: #444;
+    opacity: 0.7;
+    width: 100%;
+    height: 100%;
 }
 
 .body {
@@ -103,10 +117,11 @@ section.panel > * {
 }
 
 .button {
-    padding: 5px;
+    padding: 5px 0;
     text-align: center;
     width: 100%;
     display: block;
+    font-size: 12px;
 }
 
 /*--------- index -----------*/
@@ -163,4 +178,21 @@ section.logo {
 
 .location img {
     width: 100%;
+}
+
+.achievements {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.achievement {
+    width: 50%;
+    margin-bottom: 10px;
+}
+
+.achievement i {
+    color: #444;
+    vertical-align: middle;
+    padding-right: 10px;
 }
