--- a/html/css/main.css
+++ b/html/css/main.css
@@ -15,6 +15,7 @@
     padding: 20px;
 }
 
+body.register .head,
 body.login .head {
     display: none;
 }
@@ -129,6 +130,14 @@ section.panel > * {
     border: solid 1px #aaa;
 }
 
+.success {
+    background-color: #377537;
+    color: white;
+    font-size: 12px;
+    padding: 10px 15px;
+    margin-bottom: 20px;
+}
+
 /*--------- index -----------*/
 
 .pet {
@@ -176,6 +185,10 @@ section.logo {
     padding: 40px 0;
 }
 
+section.logo img {
+    width: 50%;
+}
+
 /*--------- new_pet -----------*/
 
 .size {
@@ -220,8 +233,14 @@ section.logo {
 }
 
 .achievement, .favourite {
-    width: 50%;
+    width: 46%;
+    padding: 5px;
     margin-bottom: 10px;
+    cursor: pointer;
+}
+
+.achievement, .favourite.selected {
+    background-color: #eee;
 }
 
 .achievement i, .favourite i {
